8354145: G1: UseCompressedOops boundary is calculated on maximum heap region size instead of maxiumum ergonomic heap region size

Reviewed-by: phh
Backport-of: 526951dba731f0e733e22a3bff7ac7a18ce9dece